--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Toboolist</title>
 </head>
+
 <body>
     <!-- Header -->
     <header>
+
+        <div class="home">
+            <img id="logo" src="img/logo.png" alt="">
+            <span id="tobo">Toboolist</span>
+        </div>
 
     </header>
     <!-- /Header -->
@@ -24,4 +31,5 @@
     </footer>
     <!-- /Footer -->
 </body>
+
 </html>
