--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
 <body>
     <!-- Header -->
     <header>
-
+        <!-- Barra Home -->
         <div class="home">
             <img id="logo" src="img/logo.png" alt="">
             <span id="tobo">Toboolist</span>
         </div>
-
     </header>
     <!-- /Header -->
     <!-- Main -->
     <main>
-
+        <!-- Riquadro -->
+        <div class="contenitore">
+            <!-- Bottoni -->
+            <nav>
+                <section>
+                    <button id="add_task">Add Task</button>
+                    <button id="add_section">Add Section</button>
+                </section>
+            </nav>
+            
+        </div>
     </main>
     <!-- /Main -->
     <!-- Footer -->
