--- a/index.html
+++ b/index.html
@@ -30,15 +30,37 @@
                     <button id="add_section">Add Section</button>
                 </section>
             </nav>
-            
+
+            <!-- Lista -->
+            <ul>
+                <li class="titolo_item">New Task
+                    <ul>
+                        <li>Quartely Newsletter</li>
+                    </ul>
+                </li>
+
+                <li class="titolo_item">Today
+                    <ul>
+                        <li>Recruiting blog post</li>
+                        <li>Mobile app launch</li>
+                        <li>Interview John H.</li>
+                        <li>Summit update to mobile storefronts</li>
+                    </ul>
+                </li>
+
+                <li class="titolo_item"> Upcoming
+                    <ul>
+                        <li>Schedule meeting with Alex</li>
+                        <li>Homepage refresh</li>
+                        <li>Onboard new Sales team members</li>
+                        <li>Review editorial calendar</li>
+                    </ul>
+                </li>
+            </ul>
+
         </div>
     </main>
     <!-- /Main -->
-    <!-- Footer -->
-    <footer>
-
-    </footer>
-    <!-- /Footer -->
 </body>
 
 </html>
