--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
             </nav>
 
             <!-- Lista -->
+            
+            <div></div>
+            
             <ul>
-                <li class="titolo_item">New Task
+                <li class="lista"> <strong> &#x25BENew Task</strong>
                     <ul>
-                        <li>Quartely Newsletter</li>
+                        <li>Quartely Newsletter <span class="tag lightblue">Editorial</span></li>
                     </ul>
                 </li>
 
-                <li class="titolo_item">Today
+                <li class="lista"><strong>&#x25BEToday</strong>
                     <ul>
                         <li>Recruiting blog post</li>
                         <li>Mobile app launch</li>
@@ -48,7 +51,7 @@
                     </ul>
                 </li>
 
-                <li class="titolo_item"> Upcoming
+                <li class="lista"><strong>&#x25BEUpcoming</strong>
                     <ul>
                         <li>Schedule meeting with Alex</li>
                         <li>Homepage refresh</li>
