--- a/index.html
+++ b/index.html
@@ -38,25 +38,42 @@
             <ul>
                 <li class="lista"> <strong> &#x25BENew Task</strong>
                     <ul>
-                        <li>Quartely Newsletter <span class="tag lightblue">Editorial</span></li>
+                        <li>
+                            Quartely Newsletter 
+                            <span class="tag lightblue">Editorial</span>
+                        </li>
                     </ul>
                 </li>
 
                 <li class="lista"><strong>&#x25BEToday</strong>
                     <ul>
-                        <li>Recruiting blog post</li>
-                        <li>Mobile app launch</li>
-                        <li>Interview John H.</li>
-                        <li>Summit update to mobile storefronts</li>
+                        <li>Recruiting blog post 
+                            <span class="tag lightblue">Editorial</span>
+                        </li>
+                        <li>Mobile app launch
+                            <span class="tag purple">Q1 Goals</span>
+                        </li>
+                        <li>Interview John H.
+                            <span class="tag green">Q1 Goals</span>
+                        </li>
+                        <li>Summit update to mobile storefronts
+                            <span class="tag orange">Mobile</span>
+                        </li>
                     </ul>
                 </li>
 
                 <li class="lista"><strong>&#x25BEUpcoming</strong>
                     <ul>
                         <li>Schedule meeting with Alex</li>
-                        <li>Homepage refresh</li>
-                        <li>Onboard new Sales team members</li>
-                        <li>Review editorial calendar</li>
+                        <li>Homepage refresh
+                            <span class="tag pink">Website</span>
+                        </li>
+                        <li>Onboard new Sales team members
+                            <span class="tag lightgreen">Website</span>
+                        </li>
+                        <li>Review editorial calendar
+                            <span class="tag lightblue">Editorial</span>
+                        </li>
                     </ul>
                 </li>
             </ul>
