Aggiunta dei check e i dei cross

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li class="lista"> <strong> &#x25BENew Task</strong>
                     <ul>
                         <li>
+                            <span class="circle check">&check;</span>
                             Quartely Newsletter 
                             <span class="tag lightblue">Editorial</span>
                         </li>
@@ -47,16 +48,24 @@
 
                 <li class="lista"><strong>&#x25BEToday</strong>
                     <ul>
-                        <li>Recruiting blog post 
+                        <li>
+                            <span class="circle check">&check;</span>
+                            Recruiting blog post 
                             <span class="tag lightblue">Editorial</span>
                         </li>
-                        <li>Mobile app launch
+                        <li>
+                            <span class="circle check">&check;</span>
+                            Mobile app launch
                             <span class="tag purple">Q1 Goals</span>
                         </li>
-                        <li>Interview John H.
-                            <span class="tag green">Q1 Goals</span>
+                        <li>
+                            <span class="circle cross">&cross;</span>
+                            Interview John H.
+                            <span class="tag green">Recruiting</span>
                         </li>
-                        <li>Summit update to mobile storefronts
+                        <li>
+                            <span class="circle check">&check;</span>
+                            Summit update to mobile storefronts
                             <span class="tag orange">Mobile</span>
                         </li>
                     </ul>
@@ -64,14 +73,22 @@
 
                 <li class="lista"><strong>&#x25BEUpcoming</strong>
                     <ul>
-                        <li>Schedule meeting with Alex</li>
-                        <li>Homepage refresh
+                        <li>
+                            <span class="circle cross">&cross;</span>
+                            Schedule meeting with Alex</li>
+                        <li>
+                            <span class="circle check">&check;</span>
+                            Homepage refresh
                             <span class="tag pink">Website</span>
                         </li>
-                        <li>Onboard new Sales team members
+                        <li>
+                            <span class="circle check">&check;</span>
+                            Onboard new Sales team members
                             <span class="tag lightgreen">Website</span>
                         </li>
-                        <li>Review editorial calendar
+                        <li>
+                            <span class="circle check">&check;</span>
+                            Review editorial calendar
                             <span class="tag lightblue">Editorial</span>
                         </li>
                     </ul>
