--- a/index.html
+++ b/index.html
@@ -32,70 +32,79 @@
             </nav>
 
             <!-- Lista -->
-            
-            <div></div>
-            
             <ul>
+                <!-- New Task -->
                 <li class="lista"> <strong> &#x25BENew Task</strong>
+                    <!-- Elementi New Task -->
                     <ul>
-                        <li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Quartely Newsletter 
                             <span class="tag lightblue">Editorial</span>
                         </li>
                     </ul>
+                    <!-- Fine Elementi -->
                 </li>
 
+                <!-- Today -->
                 <li class="lista"><strong>&#x25BEToday</strong>
+                    <!-- Elementi Today -->
                     <ul>
-                        <li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Recruiting blog post 
                             <span class="tag lightblue">Editorial</span>
                         </li>
-                        <li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Mobile app launch
                             <span class="tag purple">Q1 Goals</span>
                         </li>
-                        <li>
+                        <li class="elementi">
                             <span class="circle cross">&cross;</span>
                             Interview John H.
                             <span class="tag green">Recruiting</span>
                         </li>
-                        <li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Summit update to mobile storefronts
                             <span class="tag orange">Mobile</span>
                         </li>
                     </ul>
+                    <!-- Fine Elementi -->
                 </li>
 
+                <!-- Upcoming -->
                 <li class="lista"><strong>&#x25BEUpcoming</strong>
+                     <!-- Elementi Upcoming -->
                     <ul>
-                        <li>
+                        <li class="elementi">
                             <span class="circle cross">&cross;</span>
-                            Schedule meeting with Alex</li>
-                        <li>
+                            Schedule meeting with Alex
+                        </li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Homepage refresh
                             <span class="tag pink">Website</span>
                         </li>
-                        <li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Onboard new Sales team members
                             <span class="tag lightgreen">Website</span>
                         </li>
-                        <li>
+                        <li class="elementi">
                             <span class="circle check">&check;</span>
                             Review editorial calendar
                             <span class="tag lightblue">Editorial</span>
                         </li>
                     </ul>
+                    <!-- Fine Elementi -->
                 </li>
+                <!-- Fine Upcoming -->
             </ul>
-
+            <!-- Fine Lista -->
         </div>
+        <!-- Fine Contenitore -->
     </main>
     <!-- /Main -->
 </body>
