Correzione errori vari

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Lista -->
             <ul>
                 <!-- New Task -->
-                <li class="lista"> <strong> &#x25BENew Task</strong>
+                <li class="lista"> <strong> &#x25BE;New Task</strong>
                     <!-- Elementi New Task -->
                     <ul>
                         <li class="elementi">
@@ -47,7 +47,7 @@
                 </li>
 
                 <!-- Today -->
-                <li class="lista"><strong>&#x25BEToday</strong>
+                <li class="lista"><strong>&#x25BE;Today</strong>
                     <!-- Elementi Today -->
                     <ul>
                         <li class="elementi">
@@ -75,7 +75,7 @@
                 </li>
 
                 <!-- Upcoming -->
-                <li class="lista"><strong>&#x25BEUpcoming</strong>
+                <li class="lista"><strong>&#x25BE;Upcoming</strong>
                      <!-- Elementi Upcoming -->
                     <ul>
                         <li class="elementi">
