Inversione del nav e section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
         <!-- Riquadro -->
         <div class="contenitore">
             <!-- Bottoni -->
+            <section>
                 <nav>
                     <button id="add_task">Add Task</button>
                     <button id="add_section">Add Section</button>
                 </nav>
+            </section>
+                
 
             <!-- Lista -->
             <ul>
